--- a/tunnel-server/package.json
+++ b/tunnel-server/package.json
@@ -5,11 +5,13 @@
   "type": "module",
   "license": "Apache-2.0",
   "dependencies": {
+    "@fastify/cors": "^8.3.0",
     "@fastify/request-context": "^5.0.0",
     "@sindresorhus/fnv1a": "^3.0.0",
     "content-type": "^1.0.5",
     "cookies": "^0.8.0",
     "fastify": "^4.22.2",
+    "fastify-type-provider-zod": "^1.1.9",
     "htmlparser2": "^9.0.0",
     "http-proxy": "^1.18.1",
     "iconv-lite": "^0.6.3",
@@ -21,6 +23,7 @@
     "pino-pretty": "^9.4.0",
     "prom-client": "^14.2.0",
     "ssh2": "^1.12.0",
+    "tough-cookie": "^4.1.3",
     "ts-node": "^10.9.1",
     "ts-pattern": "^5.0.5",
     "tseep": "^1.1.1",
@@ -38,6 +41,7 @@
     "@types/node": "18",
     "@types/node-fetch": "^2.6.4",
     "@types/ssh2": "^1.11.8",
+    "@types/tough-cookie": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "6.7.4",
     "@typescript-eslint/parser": "6.7.4",
     "eslint": "^8.36.0",
